# spv-on-cpu

./: CMakeLists.txt  assembly_testing.cpp  id_data.hpp  instruction_data.txt  simple_vec.hpp  spird_accessor.cpp  spird_accessor.hpp  spird_builder_main.cpp  spird_builder_strings.hpp  spird_defs.hpp  spird_hashing.cpp  spird_names.cpp  spird_names.hpp  spv_data_accessor.cpp  spv_data_accessor.hpp  spv_data_builder_main.cpp  spv_data_builder_strings.hpp  spv_data_defs.hpp  spv_data_hashing.cpp  spv_data_hashing.hpp  spv_defs.hpp  spv_helpers.cpp  spv_helpers.hpp  spv_result.hpp  spv_runner.cpp  spv_runner.hpp  spv_viewer.cpp  spv_viewer.hpp  spvcpu.cpp  spvcpu.hpp  tests.cpp  voxel_volume_init_assignindex.comp.spv
test_data/: buffer_copy.comp.spv  init_checkempty.dbg.comp.spv  sdf_font.frag.spv  sdf_font.vert.spv  simplex3d.comp.spv  simplex3d_layered.comp.spv  trace.comp.spv  voxel_volume_init_checkempty.comp.spv
